[workspace]
members = [
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
]
default-members = [
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
aws-lc-rs = { git = "https://github.com/ctz/aws-lc-rs", branch = "rebased-kem-cleanup" }
